fix: change definition visibility:hidden to display: none for info elements for selects elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,8 +273,7 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
-
 #neighborhoods-select-info,
 #cuisine-select-info {
-    visibility: hidden;
+    display: none;
 }
